--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Tomcar Example</title>
-        <script src="js/tomcar.js"></script>
+        <script src="../target/tomcar.js"></script>
 
         <script>
 
@@ -56,6 +56,6 @@
             <input type="color" id="color1" /><br/>
             <canvas id="mainCanvas" width="500" height="500"></canvas>
         </div>
-        <button onclick="tomcar_run()" ></button>
+        <button onclick="tomcar_run()" >测试</button>
     </body>
 </html>
